syntax = "proto3";

package project.planton.credential.terraformbackendcredential.v1;

import "buf/validate/validate.proto";
import "project/planton/shared/shared.proto";
import "project/planton/credential/terraformbackendcredential/v1/spec.proto";

//terraform-backend-credential
message TerraformBackendCredential {
  //api-version
  string api_version = 1 [
    (buf.validate.field).string.const = 'credential.project-planton.org/v1'
  ];

  //resource-kind
  string kind = 2;

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3;

  //spec
  TerraformBackendCredentialSpec spec = 4;

  //status
  project.planton.shared.ApiResourceLifecycleAndAuditStatus status = 5;
}
