syntax = "proto3";

package project.planton.shared.tofu;

// tofu operation type
// the recommended best practice to prefix the entry with enum name has been intentionally ignored
// to allow users to specify a user-friendly name in the input.
enum TofuOperationType {
  tofu_operation_type_unspecified = 0;
  init = 1;
  refresh = 2;
  plan = 3;
  apply = 4;
  destroy = 5;
}

enum TofuBackendType {
  // Unspecified or unknown backend type.
  tofu_backend_type_unspecified = 0;

  // Local filesystem backend (the default if none is configured).
  local = 1;

  // Amazon S3-based backend for remote state storage.
  s3 = 2;

  // Terraform Cloud or Terraform Enterprise remote backend.
  remote = 3;

  // Google Cloud Storage backend for storing state.
  gcs = 4;

  // Azure Resource Manager backend using Azure Blob Storage.
  azurerm = 5;

  // Consul key-value store backend for state storage and locking.
  consul = 6;

  // Generic HTTP backend for state storage.
  http = 7;

  // etcdv3 key-value store backend.
  etcdv3 = 8;

  // Joyent Manta object storage backend.
  manta = 9;

  // OpenStack Swift object storage backend.
  swift = 10;

  // JFrog Artifactory-based backend for state storage.
  artifactory = 11;

  // Alibaba Cloud Object Storage Service (OSS) backend.
  oss = 12;
}
